v7.8.0
  - Fix OAuth login with GitLab installed in relative URL
  - GitLab CI has same version as GitLab since now
  - Allow to pass description and tag list during Runner's registration

v5.4.2
  - Fix exposure of project token via build data

v5.4.1
  - Fix 500 if on builds page if build has no job
  - Truncate project token from build trace
  - Allow users with access to project see build trace

v5.4.0 (Requires GitLab 7.7)
  - Fixed 500 error for badge if build is pending
  - Non-admin users can now register specific runners for their projects
  - Project specific runners page which users can access
  - Remove progress output from schedule_builds cron job
  - Fix schedule_builds rake task
  - Fix test webhook button
  - Job can be branch specific or tag specifi or both
  - Shared runners builds projects which are not assigned to specific ones
  - Job can be runner specific through tags
  - Runner have tags
  - Move job settings to separate page
  - Add authorization level managing projects
  - OAuth authentication via GitLab.

v5.3
  - Remove annoying 'Done' message from schedule_builds cron job
  - Fix a style issue with the navbar
  - Skip CSRF check on the project's build page
  - Fix showing wrong build script on admin projects page
  - Add branch and commit message to build result emails

v5.2
  - Improve performance by adding new indicies
  - Separate Commit logic from Build logic in prep for Parallel Builds
  - Parallel builds
  - You can have multiple build scripts per project

v5.1
  - Registration token and runner token are named differently
  - Redirect to previous page after sign-in
  - Dont show archived projects
  - Add support for skip branches from build
  - Add coverage parsing feature
  - Update rails to 4.0.10
  - Look for a REVISION file before running `git log`
  - All builds page for admin

v5.0.1
  - Update rails to 4.0.5

v5.0.0
  - Set build timeout in minutes
  - Web Hooks for builds
  - Nprogress bar